tmp.err.txt
[eval]:1
require('http').createServer((req,res)=>res.end('ok')).listen(5002,'0.0.0.0',()=>console.log('listening
                                                                                             ^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:386:10)
    at node:internal/process/execution:450:25
    at [eval]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:447:60)
    at evalFunction (node:internal/process/execution:87:30)
    at evalScript (node:internal/process/execution:99:3)
    at node:internal/main/eval_string:74:3

Node.js v22.14.0
